# geomagic_touch

./: README.md
test_geomagic_yarp/: CMakeLists.txt  cartesianClient.cpp  cartesianClient.h  fakeGeomagicDriver.cpp  fakeGeomagicDriver.h  test_ReplayManyTrajectories.cpp  test_ReplayOneTrajectory.cpp  test_feedback.cpp  test_gazebo.cpp  test_orientation.cpp  test_simple.cpp
